--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,6 +1,6 @@
 PORT = 8000
 NODE_ENV = production
-DB_LOCAL_URI = mongodb://localhost:27017/wearin
+DB_LOCAL_URI = mongodb+srv://velr8091:9OdIfmtazaXWCGR1@wearin.kqdsr.mongodb.net/?retryWrites=true&w=majority&appName=wearin
 JWT_SECRET=C7BD2D6548522
 JWT_EXPIRES_TIME=7d
 COOKIE_EXPIRES_TIME=7
