--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,6 +1,6 @@
 PORT = 8000
 NODE_ENV = production
-DB_LOCAL_URI = 
+DB_LOCAL_URI = mongodb+srv://freeforerfie:syKiaiFFz4JkCovK@wearin.l8vbb.mongodb.net/?retryWrites=true&w=majority&appName=wearin
 JWT_SECRET=C7BD2D6548522
 JWT_EXPIRES_TIME=7d
 COOKIE_EXPIRES_TIME=7
