--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "4.1",
     "mongoose": "^8.2.1",
+    "cors": "^2.8.5",
     "razorpay": "^2.9.3",
     "validator": "^13.11.0"
   },
